Fix alignments

--- a/e-learning/src/components/Button.module.scss
+++ b/e-learning/src/components/Button.module.scss
@@ -1,8 +1,9 @@
 .container {
   font-weight: 300;
   display: inline-flex;
-  padding: 0 0.5em;
-  height: 1.9em;
+  padding: 0 0.65em;
+  height: 2em;
+  padding-top: 0.2em;
   font-family: var(--sans);
   line-height: 1;
   border-radius: var(--br);
