--- a/e-learning/src/components/Term.module.scss
+++ b/e-learning/src/components/Term.module.scss
@@ -7,7 +7,8 @@
   text-align: left;
   font-weight: 500;
   padding: 0.1em 0.2em;
-  padding-bottom: 0.2em;
+  padding-top: 0.25em;
+  padding-bottom: 0.05em;
   line-height: 1;
   transition: var(--fast);
   outline: 1px solid transparent;
